# jedi-academy-rust

./: .gitignore  .gitmodules  Cargo.toml  PORTING_STYLE.md  README.md  build.rs
.github/workflows/: build.yml
discrepancies/: FORMAT.md  HANDOFF.md  ai_main.md  ai_wpnav.md  bg_pmove.md  bg_saber.md  g_client.md  g_combat.md  g_items.md  pairs.json  q_math.md  validate-raven.mjs  w_force.md  w_saber.md
handoffs/: 2026-06-28-blind-port-haiku-batch30-calibration.md  2026-06-28-blind-port-haiku-cycle100.md  2026-06-28-blind-port-haiku-cycle300.md  2026-06-28-blind-port-haiku-smallmed-finish.md  2026-06-28-blind-port-mp3code.md  2026-06-28-blind-port-null.md  2026-06-28-blind-port-png-stop.md  2026-06-28-blind-port-small-headers-batch2.md  2026-06-28-blind-port-small-headers-batch3.md  2026-06-28-blind-port-small-headers-batch4.md  2026-06-28-blind-port-small-headers-batch5.md  2026-06-28-blind-port-small-headers-batch6.md  2026-06-28-blind-port-small-headers-batch7.md  2026-06-28-blind-port-small-headers-batch8.md  2026-06-28-blind-port-small-headers-batch9.md  2026-06-28-blind-port-small-headers-stop.md  2026-06-28-blind-port-unix-stop.md  stub-report-worklist.md  workspace-scaffold.md
modules/mp-cgame/: Cargo.toml
modules/mp-cgame/src/: lib.rs
modules/mp-ded/: Cargo.toml
modules/mp-ded/src/: main.rs
modules/mp-engine/: Cargo.toml
modules/mp-engine/src/: main.rs
modules/mp-game/: Cargo.toml  build.rs
modules/mp-game/src/: lib.rs
modules/mp-game/src/codemp/: mod.rs
modules/mp-ui/: Cargo.toml
modules/mp-ui/src/: lib.rs
modules/sp-engine/: Cargo.toml
modules/sp-engine/src/: main.rs
modules/sp-game/: Cargo.toml
modules/sp-game/src/: lib.rs
oracle_c/: ai_h_oracle.c  ai_main_oracle.c  anims_oracle.c  animtable_oracle.c  b_public_h_oracle.c  bg_lib_oracle.c  bg_local_h_oracle.c  bg_misc_give_me_vector_from_matrix_oracle.c  bg_misc_items_oracle.c  bg_misc_oracle.c  bg_misc_parsefield_oracle.c  bg_panimate_oracle.c  bg_panimate_setters_oracle.c  bg_pmove_oracle.c  bg_public_enums_oracle.c  bg_public_oracle.c  bg_public_structs_oracle.c  bg_saberLoad_oracle.c  bg_saber_oracle.c  bg_saga_oracle.c  bg_vehicleLoad_oracle.c  bg_vehicles_h_oracle.c  bg_weapons_h_oracle.c  bg_weapons_oracle.c  compile_flags.txt  fighternpc_oracle.c  g_ICARUScb_oracle.c  g_active_oracle.c  g_client_oracle.c  g_cmds_oracle.c  g_combat_oracle.c  g_items_oracle.c  g_local_oracle.c  g_main_oracle.c  g_misc_oracle.c  g_missile_oracle.c  g_mover_oracle.c  g_nav_oracle.c  g_public_h_oracle.c  g_spawn_oracle.c  (+23 more)
scripts/: compare-src-oracle.sh  find-unpaired-oracle-files.mjs  latest-handoff.sh
scripts/genmod/: genmod.py  mp-cgame.json  mp-ded.json  mp-engine.json  mp-game.json  mp-ui.json  sp-engine.json  sp-game.json
skills/blind-port-orchestrator/: SKILL.md
skills/faithful-port/: AGENT_PROMPT.md  SKILL.md
skills/resume-blind-port/: SKILL.md
skills/resume-stub-report/: SKILL.md  TRIAGE_PROMPT.md
src/: lib.rs  macros.rs  oracle.rs
src/code/: mod.rs
src/code/0_compiled_first/: 0_SH_Leak.rs  mod.rs
src/code/RMG/: RM_Area.rs  RM_Area_h.rs  RM_Headers_h.rs  RM_Instance.rs  RM_InstanceFile.rs  RM_Instance_BSP.rs  RM_Instance_BSP_h.rs  RM_Instance_Group.rs  RM_Instance_Group_h.rs  RM_Instance_Random.rs  RM_Instance_Random_h.rs  RM_Instance_Void.rs  RM_Instance_Void_h.rs  RM_Instance_h.rs  RM_Manager.rs  RM_Manager_h.rs  RM_Mission.rs  RM_Mission_h.rs  RM_Objective.rs  RM_Objective_h.rs  RM_Path.rs  RM_Path_h.rs  RM_Terrain.rs  mod.rs
src/code/Ragl/: graph_region_h.rs  graph_triangulate_h.rs  graph_vs_h.rs  kdtree_vs_h.rs  mod.rs  ragl_common_h.rs
src/code/Ratl/: array_vs_h.rs  bits_vs_h.rs  grid_vs_h.rs  handle_pool_vs_h.rs  hash_pool_vs_h.rs  heap_vs_h.rs  list_vs_h.rs  map_vs_h.rs  mod.rs  pool_vs_h.rs  queue_vs_h.rs  ratl.rs  ratl_common_h.rs  scheduler_vs_h.rs  stack_vs_h.rs  string_vs_h.rs  vector_vs_h.rs
src/code/Ravl/: CBounds.rs  CBounds_h.rs  CMatrix_h.rs  CVec.rs  mod.rs
src/code/Rufl/: hfile.rs  hfile_h.rs  hstring.rs  hstring_h.rs  mod.rs
src/code/SHDebug/: mod.rs
src/code/cgame/: FX_ATSTMain.rs  FX_Blaster.rs  FX_Bowcaster.rs  FX_BryarPistol.rs  FX_Concussion.rs  FX_DEMP2.rs  FX_Disruptor.rs  FX_Emplaced.rs  FX_Flechette.rs  FX_HeavyRepeater.rs  FX_NoghriShot.rs  FX_RocketLauncher.rs  FX_TuskenShot.rs  FxParsing.rs  FxParsing_h.rs  FxPrimitives_h.rs  FxScheduler.rs  FxScheduler_h.rs  FxSystem.rs  FxSystem_h.rs  FxUtil.rs  FxUtil_h.rs  animtable_h.rs  cg_camera.rs  cg_camera_h.rs  cg_consolecmds.rs  cg_credits.rs  cg_drawtools.rs  cg_effects.rs  cg_event.rs  cg_headers.rs  cg_info.rs  cg_lights.rs  cg_local_h.rs  cg_localents.rs  cg_marks.rs  cg_media_h.rs  cg_playerstate.rs  cg_predict.rs  cg_public_h.rs  (+8 more)
src/code/client/: BinkVideo.rs  BinkVideo_h.rs  cl_cgame.rs  cl_cin.rs  cl_cin_console.rs  cl_console.rs  cl_input.rs  cl_input_hotswap.rs  cl_input_hotswap_h.rs  cl_keys.rs  cl_main.rs  cl_mp3.rs  cl_mp3_h.rs  cl_parse.rs  cl_scrn.rs  cl_ui.rs  client_h.rs  client_ui_h.rs  fffx_h.rs  keycodes_h.rs  keys_h.rs  mod.rs  snd_ambient.rs  snd_ambient_h.rs  snd_local_console_h.rs  snd_local_h.rs  snd_mem.rs  snd_mem_console.rs  snd_mix.rs  snd_music.rs  snd_music_h.rs  snd_public_h.rs  vmachine.rs  vmachine_h.rs
src/code/ff/: cl_ff.rs  common_headers_h.rs  ff.rs  ff_ChannelCompound_h.rs  ff_ChannelSet.rs  ff_ChannelSet_h.rs  ff_ConfigParser.rs  ff_ConfigParser_h.rs  ff_HandleTable.rs  ff_MultiCompound.rs  (+15 more)
src/codemp/: mod.rs  namespace_begin_h.rs  namespace_end_h.rs
src/ffi/: exports.rs  game_export.rs  game_import.rs  mod.rs  syscalls.rs  types.rs
src/trap/: aas.rs  botlib_ai.rs  botlib_core.rs  ea.rs  ghoul2_ext.rs  misc.rs  mod.rs  nav.rs
(+1070 files in other folders)
