# Workspace root — virtual manifest.
#
# The Jedi Academy port mirrors Raven's original build: each engine module is a
# SEPARATE artifact (jampgamex86.dll, cgamex86.dll, uix86.dll, jagamex86.dll, the
# jamp/jampded executables, …), exactly as `oracle/codemp/JKA_mp.sln` and OpenJK's
# CMake produce them. Cargo emits at most one library per package and the modules
# each define their own `#[no_mangle] vmMain`/`dllEntry`, so every module must be
# its own crate — hence this workspace.
#
# The ported Rust sources live ONCE under `src/` (an unmoved, crate-agnostic pool
# that mirrors `oracle/`). Each `modules/<name>` crate is a thin, GENERATED manifest
# that mounts only its own transitive `use crate::…` closure out of that pool via
# `#[path]`, so `crate::codemp::game::…` resolves identically inside every module —
# the faithful analogue of Raven compiling shared files (bg_*, q_shared, …) into
# each module target. Regenerate manifests with `scripts/genmod` (see handoffs).
[workspace]
resolver = "2"
members = [
    # MP module libraries (cdylib)
    "modules/mp-game",    # jampgame  — MP server game module            [builds ✓]
    "modules/mp-cgame",   # cgame     — MP client game module
    "modules/mp-ui",      # ui        — MP UI module
    # SP module library (cdylib)
    "modules/sp-game",    # jagame    — SP server game module
    # Executables (bin) — WIP scaffolds, entry point not yet wired (Phase 2)
    "modules/mp-engine",  # jamp      — MP engine executable
    "modules/mp-ded",     # jampded   — MP dedicated server
    "modules/sp-engine",  # jasp      — SP engine executable
]

# Cargo only honours [profile.*] from the workspace root.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Never unwind across the FFI boundary into the C engine — that is UB. Aborting
# is the safe choice for the shipped module. (vmMain also catches panics as a
# belt-and-suspenders so dev/test builds, which unwind, stay sound too.)
panic = "abort"
strip = true

# Release-with-symbols: identical codegen to `release` but keeps debug info for
# profiling / gdb / symbolized backtraces. Build with: cargo build --profile release-dbg
[profile.release-dbg]
inherits = "release"
strip = false
debug = true
